Add base project
Capabilities: Training and evaluating adversarial image on thinking and instruct Qwen.

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,9 @@
+# Experiment outputs
+*.out
+experiments/
+data/reasoning_benchmark/
+data/alpaca.json
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[codz]
