--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,8 +6,10 @@ readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
     "accelerate>=1.11.0",
+    "datasets>=4.4.1",
     "jaxtyping>=0.3.3",
     "matplotlib>=3.10.7",
+    "pandas>=2.3.3",
     "pillow>=12.0.0",
     "pyyaml>=6.0",
     "torch>=2.9.0",
