Add finetuning/logit inspection experiments
In attempt to discover why the images we're training are unable to increase the probability of a specific string being outputted.

--- a/configs/default.yaml
+++ b/configs/default.yaml
@@ -10,6 +10,7 @@ learning_rate: 0.01
 epsilon: 1.0  # 255/255
 steps_per_epoch: 100
 checkpoint_dir: null # ex. 'experiments/20251105_120632'
+checkpoint_every: 10 # Save adversarial image checkpoint every N epochs
 loss_type: ce # Options: "ce", "margin"
 margin_param: 0 # Margin loss hyperparameter 
 
